# gstreamer-made-simple

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  gms.doap  gstreamer-made-simple.spec.in
docs/: Makefile.am  version.entities.in
docs/design/: video-stream-comparator.txt  waveform.txt
docs/libs/: .gitignore  Makefile.am  gms-docs.sgml  gms-sections.txt  gms.types
gms/: Makefile.am  gms-enums.h  gms-types.h  gms-utils.c  gms-utils.h  gms-video-stream-comparator-result.h  gms-video-stream-comparator.c  gms-video-stream-comparator.h  gms-waveformer.c  gms-waveformer.h  gms.c  gms.h
tests/check/: Makefile.am
tests/check/gms/: .gitignore  videostreamcomparator.c
tools/: video-stream-comparator.py  waveformer.py
